@@ -29,6 +29,8 @@ Fixed: MacOS: When "check network" is used, but no network interfaces are found,
 
 Fixed: FreeBSD + OpenBSD: Detect presence of backtrace() function during compilation (used in monit -vv mode to print backtrace)
 
+New: When monit aborts (e.g. due to assert), print a backtrace.
+
 
 Version 5.34.4
 
